# pegasus

./: .env.example  .gitignore  ARCHITECTURE.md  INDEX.md  PROJECT_MAP.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  pegasus_v2.py  pyproject.toml
examples/: 01_basic_rag.py  02_multi_provider.py  README.md
pegasus/: __init__.py  api.py  chunking.py  cli.py  config.py  embeddings.py  index.py  integration.py  loaders.py  models.py  pegasus.py  reranker.py  search.py  storage.py
