[project]
name = "pegasus"
version = "2.1.0"
description = "High-Performance RAG Engine with USearch + SQLite"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pegasus Team" }
]
keywords = ["rag", "retrieval", "embeddings", "vector-search", "usearch", "hnsw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "usearch>=2.0.0",
    "openai>=1.0.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.23.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]
huggingface = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
all = [
    "pegasus[api,huggingface]",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
pegasus = "pegasus.cli:main"

[project.urls]
Homepage = "https://github.com/pegasus-rag/pegasus"
Documentation = "https://github.com/pegasus-rag/pegasus#readme"
Repository = "https://github.com/pegasus-rag/pegasus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pegasus"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
